# flask-project-generator

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/flask_generator/: cli.py
src/flask_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
