[project]
name = "python-project-generator"
version = "0.1.0"
description = "A CLI tool to generate Flask projects"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "click",
    "questionary",
    "questionary"
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
create-python-project = "python_generator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/duanyongcheng/flask-project-generator"
Repository = "https://github.com/duanyongcheng/flask-project-generator.git"
